# SPOTSCAN2

./: .gitignore  CMakeLists.txt  README.md  acidity_analyzer.cpp  build.sh  color_analyzer.h  food_detector.cpp  freshness_detector.cpp  image_processor.h  liquid_analyzer.cpp  liquid_analyzer.h  main.cpp  main_window.cpp  nutrition_analyzer.h  ocr_analyzer.cpp  temperature_analyzer.cpp  temperature_analyzer.h  texture_analyzer.h  vit_analyzer.cpp  vit_analyzer.h
include/: acidity_analyzer.h  food_detector.h  freshness_detector.h  main_window.h  model_manager.h  ocr_analyzer.h  portion_analyzer.h  safety_checker.h
src/: Vit  color_analyzer.cpp  image_processor.cpp  model_manager.cpp  portion_analyzer.cpp  safety_checker.cpp  texture_analyzer.cpp
